// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests render should render form-button correctly 1`] = `
<button
  className="button medium primary form-button"
  onClick={[Function]}
  type="normal"
>
   
  Press me
</button>
`;

exports[`Button tests render should render normal button correctly 1`] = `
<button
  className="button medium primary"
  onClick={[Function]}
  type="normal"
>
   
  Press me
</button>
`;
